prevented admin access to user data
- prevented admins from accessing other user's chats
- prevented admins from export all user chats

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,9 @@ services:
       # web search settings
       - ENABLE_RAG_WEB_SEARCH=True
       - RAG_WEB_SEARCH_ENGINE=duckduckgo # api keys set in secrets.env
+      # privacy settings
+      - ENABLE_ADMIN_CHAT_ACCESS=False
+      - ENABLE_ADMIN_EXPORT=False
     env_file:
       # secrets
       - secrets.env
